--- a/templates/base.html
+++ b/templates/base.html
@@ -76,7 +76,7 @@
         <div class="profile-details">
           <img src="{{ url_for('static', filename='images/profile.png') }}" alt="profileImg">
           <div class="name_job">
-            <div class="name">THXMAN</div>
+            <div class="name">MAXITHX</div>
             <div class="job">Developer</div>
           </div>
         </div>
