refactor(routes,nav): rename htop monitor endpoint to settings.glances and template to glances.html; update sidebar link; add legacy redirect

--- a/templates/base.html
+++ b/templates/base.html
@@ -57,11 +57,11 @@
         <span class="tooltip">Logs</span>
       </li>
       <li>
-        <a href="{{ url_for('settings.htop_monitor') }}">
+        <a href="{{ url_for('settings.glances') }}">
           <i class='bx bx-pie-chart-alt-2'></i>
           <span class="links_name">Live System (Glances)</span>
         </a>
-        <span class="tooltip">Live HTOP</span>
+        <span class="tooltip">Live System (Glances)</span>
       </li>
       <li>
         <a href="{{ url_for('terminal.terminal') }}">
